apps/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: Excalidraw
    hajimari.io/icon: mdi:pencil
spec:
  ingressClassName: istio
  rules:
    - host: &host draw.kleinsorge.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: excalidraw
                port:
                  name: http
  tls:
    - secretName: excalidraw-tls-certificate
      hosts:
        - *host
